--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -1,18 +1,3 @@
-name: Terraform + Docker Deploy
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
-env:
-  AWS_REGION: us-east-1
-  ECR_REPO: docker-flask
-  EC2_NAME: flaskapp-web-server
-  TERRAFORM_VER: 1.5.1
-  GIT_SHA: ${{ github.sha }}
-
 jobs:
   terraform:
     name: Provision AWS Resources
@@ -20,11 +5,9 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
     defaults:
       run:
         working-directory: ./terraform
-
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -37,26 +20,28 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+
+      - name: Destroy existing Terraform resources
+        run: terraform destroy -auto-approve
+
+
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
-      - name: Terraform apply
+    
+
+      - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
 
-      - name: Save Terraform Outputs
+      - name: Set Terraform Outputs
         id: tf_outputs
         run: |
-          # Clean output and safely write to GITHUB_ENV
           EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
           ECR_URL=$(terraform output -raw ecr_repo_url | tr -d '\r\n')
           echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
           echo "ECR_REPO_URL=$ECR_URL" >> $GITHUB_ENV
-        working-directory: ./terraform
-      
-      - name: Debug Terraform Outputs
-        run: |
-          echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP"
-          echo "ECR_REPO_URL=$ECR_REPO_URL"
+          echo "ec2_public_ip=$EC2_IP" >> $GITHUB_OUTPUT
+          echo "ecr_repo_url=$ECR_URL" >> $GITHUB_OUTPUT
 
   build_push:
     name: Build and Push Docker Image
@@ -65,6 +50,7 @@ jobs:
     env:
       AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
+      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}   # <- job output
 
     steps:
       - name: Checkout Repo
@@ -77,17 +63,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-     
-
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region $AWS_REGION | \
-          docker login --username AWS --password-stdin $ECR_REPO_URL
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin "$ECR_REPO_URL"
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t $ECR_REPO_URL:$GIT_SHA .
-          docker push $ECR_REPO_URL:$GIT_SHA
+          docker build -t "$ECR_REPO_URL:$GIT_SHA" .
+          docker push "$ECR_REPO_URL:$GIT_SHA"
 
   deploy:
     name: Deploy on EC2
@@ -96,6 +79,8 @@ jobs:
     env:
       AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
+      EC2_PUBLIC_IP: ${{ needs.terraform.outputs.ec2_public_ip }}  # <- job output
+      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}    # <- job output
 
     steps:
       - name: Checkout Repo
