--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -1,3 +1,20 @@
+name: Terraform + Docker Deploy
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+    inputs:
+      destroy_first:
+        description: 'Destroy existing resources before applying?'
+        default: 'false'
+
+env:
+  AWS_REGION: us-east-1
+  TERRAFORM_VER: 1.5.1
+  GIT_SHA: ${{ github.sha }}
+
 jobs:
   terraform:
     name: Provision AWS Resources
@@ -8,6 +25,10 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform
+    outputs:
+      ec2_public_ip: ${{ steps.tf_outputs.outputs.ec2_public_ip }}
+      ecr_repo_url: ${{ steps.tf_outputs.outputs.ecr_repo_url }}
+
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -20,20 +41,17 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-
-      - name: Destroy existing Terraform resources
+      - name: Destroy existing resources (optional)
+        if: ${{ github.event.inputs.destroy_first == 'true' }}
         run: terraform destroy -auto-approve
-
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
-    
-
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
 
-      - name: Set Terraform Outputs
+      - name: Save Terraform Outputs
         id: tf_outputs
         run: |
           EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
@@ -48,9 +66,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform
     env:
-      AWS_REGION: us-east-1
+      AWS_REGION: ${{ env.AWS_REGION }}
       GIT_SHA: ${{ github.sha }}
-      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}   # <- job output
+      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}
 
     steps:
       - name: Checkout Repo
@@ -65,7 +83,8 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin "$ECR_REPO_URL"
+          aws ecr get-login-password --region $AWS_REGION | \
+          docker login --username AWS --password-stdin "$ECR_REPO_URL"
 
       - name: Build and Push Docker Image
         run: |
@@ -77,10 +96,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_push
     env:
-      AWS_REGION: us-east-1
+      AWS_REGION: ${{ env.AWS_REGION }}
       GIT_SHA: ${{ github.sha }}
-      EC2_PUBLIC_IP: ${{ needs.terraform.outputs.ec2_public_ip }}  # <- job output
-      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}    # <- job output
+      EC2_PUBLIC_IP: ${{ needs.terraform.outputs.ec2_public_ip }}
+      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}
 
     steps:
       - name: Checkout Repo
