--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -14,7 +14,7 @@ env:
   AWS_REGION: us-east-1
   TERRAFORM_VER: 1.5.1
   GIT_SHA: ${{ github.sha }}
-  ECR_REPO: docker-flask  # your ECR repository name
+  ECR_REPO: docker-flask
 
 jobs:
   terraform:
@@ -55,8 +55,8 @@ jobs:
       - name: Save Terraform Outputs
         id: tf_outputs
         run: |
-          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
-          ECR_URL=$(terraform output -raw ecr_repo_url | tr -d '\r\n')
+          EC2_IP=$(terraform output -raw ec2_public_ip)
+          ECR_URL=$(terraform output -raw ecr_repo_url)
           echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
           echo "ECR_REPO_URL=$ECR_URL" >> $GITHUB_ENV
           echo "ec2_public_ip=$EC2_IP" >> $GITHUB_OUTPUT
@@ -89,6 +89,7 @@ jobs:
         run: |
           IMAGE_TAG=${GIT_SHA}
           IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:$IMAGE_TAG
+          echo "IMAGE_URI=$IMAGE_URI"
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
@@ -113,12 +114,13 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA}
             echo "Cleaning old containers..."
             docker rm -f flask-app || true
-            docker rmi -f ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA} || true
+            docker rmi -f $IMAGE_URI || true
 
             echo "Logging into ECR..."
             aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com
 
             echo "Running new container..."
-            docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA}
+            docker run -d -p 80:5000 --name flask-app $IMAGE_URI
