--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -55,8 +55,8 @@ jobs:
       - name: Save Terraform Outputs
         id: tf_outputs
         run: |
-          EC2_IP=$(terraform output -raw ec2_public_ip)
-          ECR_URL=$(terraform output -raw ecr_repo_url)
+          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n' | head -n1)
+          ECR_URL=$(terraform output -raw ecr_repo_url | tr -d '\r\n' | head -n1)
           echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
           echo "ECR_REPO_URL=$ECR_URL" >> $GITHUB_ENV
           echo "ec2_public_ip=$EC2_IP" >> $GITHUB_OUTPUT
@@ -70,6 +70,8 @@ jobs:
       AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}
 
     steps:
       - name: Checkout Repo
@@ -88,7 +90,8 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           IMAGE_TAG=${GIT_SHA}
-          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:$IMAGE_TAG
+          IMAGE_URI=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${IMAGE_TAG}
+          echo "Building Docker image $IMAGE_URI"
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
@@ -101,6 +104,7 @@ jobs:
       GIT_SHA: ${{ github.sha }}
       EC2_PUBLIC_IP: ${{ needs.terraform.outputs.ec2_public_ip }}
       ECR_REPO: docker-flask
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
     steps:
       - name: Checkout Repo
@@ -115,10 +119,11 @@ jobs:
           script: |
             echo "Cleaning old containers..."
             docker rm -f flask-app || true
-            docker rmi -f ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA} || true
+            docker rmi -f ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA} || true
 
             echo "Logging into ECR..."
-            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com
+            aws ecr get-login-password --region $AWS_REGION | \
+              docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com
 
             echo "Running new container..."
-            docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA}
+            docker run -d -p 80:5000 --name flask-app ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA}
