--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -70,8 +70,6 @@ jobs:
       AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-      ECR_REPO_URL: ${{ needs.terraform.outputs.ecr_repo_url }}
 
     steps:
       - name: Checkout Repo
@@ -90,8 +88,7 @@ jobs:
       - name: Build and Push Docker Image
         run: |
           IMAGE_TAG=${GIT_SHA}
-          IMAGE_URI=${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${IMAGE_TAG}
-          echo "Building Docker image $IMAGE_URI"
+          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${ECR_REPO}:$IMAGE_TAG
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
@@ -119,11 +116,12 @@ jobs:
           script: |
             echo "Cleaning old containers..."
             docker rm -f flask-app || true
-            docker rmi -f ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA} || true
+            docker rmi -f ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA} || true
 
             echo "Logging into ECR..."
             aws ecr get-login-password --region $AWS_REGION | \
-              docker login --username AWS --password-stdin ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com
+              docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com
 
             echo "Running new container..."
-            docker run -d -p 80:5000 --name flask-app ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA}
+            docker run -d -p 80:5000 --name flask-app \
+              ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA}
