--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -94,7 +94,10 @@ jobs:
   deploy:
     name: Deploy on EC2
     runs-on: ubuntu-latest
-    needs: build_push
+    needs:
+      - terraform
+      - build_push
+
     env:
       AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
