--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -112,7 +112,7 @@ jobs:
       - name: SSH into EC2 and Deploy Container
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ env.EC2_PUBLIC_IP }}
+          host: ${{ needs.terraform.outputs.ec2_public_ip }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
