--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -13,7 +13,6 @@ on:
 env:
   AWS_REGION: us-east-1
   TERRAFORM_VER: 1.5.1
-  GIT_SHA: ${{ github.sha }}
   ECR_REPO: docker-flask  # your ECR repository name
 
 jobs:
@@ -70,6 +69,7 @@ jobs:
       AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
     steps:
       - name: Checkout Repo
@@ -94,16 +94,7 @@ jobs:
   deploy:
     name: Deploy on EC2
     runs-on: ubuntu-latest
-    needs:
-      - terraform
-      - build_push
-
-    env:
-      AWS_REGION: us-east-1
-      GIT_SHA: ${{ github.sha }}
-      EC2_PUBLIC_IP: ${{ needs.terraform.outputs.ec2_public_ip }}
-      ECR_REPO: docker-flask
-      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+    needs: build_push
 
     steps:
       - name: Checkout Repo
@@ -112,16 +103,16 @@ jobs:
       - name: SSH into EC2 and Deploy Container
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ needs.terraform.outputs.ec2_public_ip }}
+          host: ${{ needs.terraform.outputs.ec2_public_ip }}   # ✅ directly use output here
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "Cleaning old containers..."
             docker rm -f flask-app || true
-            docker rmi -f ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA} || true
+            docker rmi -f ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }} || true
 
             echo "Logging into ECR..."
-            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
             echo "Running new container..."
-            docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GIT_SHA}
+            docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
