--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -13,7 +13,7 @@ on:
 env:
   AWS_REGION: us-east-1
   TERRAFORM_VER: 1.5.1
-  ECR_REPO: docker-flask  # your ECR repository name
+  ECR_REPO: docker-flask
 
 jobs:
   terraform:
@@ -95,24 +95,47 @@ jobs:
     name: Deploy on EC2
     runs-on: ubuntu-latest
     needs: build_push
+    env:
+      AWS_REGION: us-east-1
+      AWS_EC2: "flaskapp-web-server"      # Name tag of the EC2 instance
+      GIT_SHA: ${{ github.sha }}
+      ECR_REPO: docker-flask
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Get Public IP of EC2
+        run: |
+          echo "EC2_PUBLIC_IP=$(aws ec2 describe-instances \
+            --filters Name=tag:Name,Values=${{ env.AWS_EC2 }} \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --output text)" >> $GITHUB_ENV
+          echo "EC2 Public IP is $EC2_PUBLIC_IP"
+
       - name: SSH into EC2 and Deploy Container
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ needs.terraform.outputs.ec2_public_ip }}   # ✅ directly use output here
+          host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
           script: |
             echo "Cleaning old containers..."
             docker rm -f flask-app || true
             docker rmi -f ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }} || true
 
             echo "Logging into ECR..."
-            aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
+              docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
             echo "Running new container..."
             docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
