--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -90,14 +90,15 @@ jobs:
           IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${GIT_SHA}
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
+          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
   deploy:
     name: Deploy on EC2
     runs-on: ubuntu-latest
-    needs: build_push
+    needs: [terraform, build_push]
     env:
       AWS_REGION: us-east-1
-      AWS_EC2: "flaskapp-web-server"      # Name tag of the EC2 instance
+      AWS_EC2: "flaskapp-web-server"
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
@@ -113,7 +114,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Get Public IP of EC2
+      - name: Get EC2 Public IP
         run: |
           echo "EC2_PUBLIC_IP=$(aws ec2 describe-instances \
             --filters Name=tag:Name,Values=${{ env.AWS_EC2 }} \
@@ -129,13 +130,37 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            echo "Cleaning old containers..."
-            docker rm -f flask-app || true
-            docker rmi -f ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }} || true
+            echo "🔍 Checking Docker & AWS CLI..."
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              sudo apt update -y && sudo apt install -y docker.io
+              sudo systemctl start docker
+              sudo systemctl enable docker
+              sudo usermod -aG docker ubuntu
+            fi
 
-            echo "Logging into ECR..."
+            if ! command -v aws &> /dev/null; then
+              echo "Installing AWS CLI..."
+              sudo apt install -y awscli
+            fi
+
+            echo "🧩 Configuring AWS CLI..."
+            aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws configure set default.region ${{ env.AWS_REGION }}
+
+            echo "🪣 Logging in to ECR..."
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
               docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
-            echo "Running new container..."
+            echo "🧹 Cleaning old containers..."
+            docker stop flask-app || true
+            docker rm flask-app || true
+
+            echo "📦 Pulling new image..."
+            docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
+
+            echo "🚀 Running new container..."
             docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
+
+            echo "✅ Deployment complete! App should now be live."
