--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -1,92 +1,130 @@
-name: CI/CD - Flask on AWS EC2 via Terraform
+name: Terraform + Docker Deploy
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      destroy_first:
+        description: 'Destroy existing resources before applying?'
+        default: 'false'
 
 env:
   AWS_REGION: us-east-1
-  TERRAFORM_VER: 1.9.5
+  TERRAFORM_VER: 1.5.1
   ECR_REPO: docker-flask
 
 jobs:
-  deploy:
+  terraform:
+    name: Provision AWS Resources
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    defaults:
+      run:
+        working-directory: ./terraform  # 👈 Important! make sure .tf files are here
+    outputs:
+      ec2_public_ip: ${{ steps.tf_outputs.outputs.ec2_public_ip }}
+      ecr_repo_url: ${{ steps.tf_outputs.outputs.ecr_repo_url }}
 
     steps:
-      # ---------------------------
-      # 1️⃣ Checkout Repository
-      # ---------------------------
-      - name: Checkout code
+      - name: Checkout Repo
         uses: actions/checkout@v4
 
-      # ---------------------------
-      # 2️⃣ Configure AWS Credentials
-      # ---------------------------
-      - name: Configure AWS credentials
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TERRAFORM_VER }}
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Destroy existing resources (optional)
+        if: ${{ github.event.inputs.destroy_first == 'true' }}
+        run: terraform destroy -auto-approve
+
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
+
+      - name: Save Terraform Outputs
+        id: tf_outputs
+        run: |
+          EC2_IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
+          ECR_URL=$(terraform output -raw ecr_repo_url | tr -d '\r\n')
+          echo "EC2_PUBLIC_IP=$EC2_IP" >> $GITHUB_ENV
+          echo "ECR_REPO_URL=$ECR_URL" >> $GITHUB_ENV
+          echo "ec2_public_ip=$EC2_IP" >> $GITHUB_OUTPUT
+          echo "ecr_repo_url=$ECR_URL" >> $GITHUB_OUTPUT
+
+  build_push:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    needs: terraform
+    env:
+      AWS_REGION: us-east-1
+      GIT_SHA: ${{ github.sha }}
+      ECR_REPO: docker-flask
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # ---------------------------
-      # 3️⃣ Setup Terraform
-      # ---------------------------
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ env.TERRAFORM_VER }}
-
-      # ---------------------------
-      # 4️⃣ Terraform Init & Apply
-      # ---------------------------
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-
-      # ---------------------------
-      # 5️⃣ Get Outputs
-      # ---------------------------
-      - name: Get Terraform outputs
-        id: tf-output
-        run: |
-          echo "EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)" >> $GITHUB_ENV
-          echo "IMAGE_NAME=$(terraform output -raw image_name)" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$(terraform output -raw image_tag)" >> $GITHUB_ENV
-
-      # ---------------------------
-      # 6️⃣ Login to Amazon ECR
-      # ---------------------------
       - name: Login to Amazon ECR
-        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # ---------------------------
-      # 7️⃣ Build & Push Docker Image
-      # ---------------------------
-      - name: Build, Tag, and Push image to ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      - name: Build and Push Docker Image
         run: |
-          docker build -t $ECR_REGISTRY/${{ env.ECR_REPO }}:${GITHUB_SHA} .
-          docker push $ECR_REGISTRY/${{ env.ECR_REPO }}:${GITHUB_SHA}
+          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${GIT_SHA}
+          docker build -t $IMAGE_URI .
+          docker push $IMAGE_URI
+          echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
-      # ---------------------------
-      # 8️⃣ Deploy to EC2
-      # ---------------------------
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.1.0
+  deploy:
+    name: Deploy on EC2
+    runs-on: ubuntu-latest
+    needs: [terraform, build_push]
+    env:
+      AWS_REGION: us-east-1
+      GIT_SHA: ${{ github.sha }}
+      ECR_REPO: docker-flask
+      AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          host: ${{ env.EC2_PUBLIC_IP }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Get EC2 Public IP (from Terraform output)
+        run: |
+          echo "EC2_PUBLIC_IP=${{ needs.terraform.outputs.ec2_public_ip }}" >> $GITHUB_ENV
+          echo "EC2 Public IP is ${{ needs.terraform.outputs.ec2_public_ip }}"
+
+      - name: SSH into EC2 and Deploy Container
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ needs.terraform.outputs.ec2_public_ip }}
           username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
           script: |
             echo "🔍 Checking Docker & AWS CLI..."
             if ! command -v docker &> /dev/null; then
@@ -99,9 +137,7 @@ jobs:
 
             if ! command -v aws &> /dev/null; then
               echo "Installing AWS CLI..."
-              sudo snap install aws-cli --classic || \
-              (curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
-              sudo apt install -y unzip && unzip awscliv2.zip && sudo ./aws/install)
+              sudo apt install -y awscli
             fi
 
             echo "🧩 Configuring AWS CLI..."
@@ -111,17 +147,16 @@ jobs:
 
             echo "🪣 Logging in to ECR..."
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
-              docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
+              docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
 
             echo "🧹 Cleaning old containers..."
             docker stop flask-app || true
             docker rm flask-app || true
 
             echo "📦 Pulling new image..."
-            docker pull ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:${GITHUB_SHA}
+            docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
 
             echo "🚀 Running new container..."
-            docker run -d -p 80:5000 --name flask-app \
-              ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO }}:${GITHUB_SHA}
+            docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
 
             echo "✅ Deployment complete! App should now be live."
