--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     defaults:
       run:
-        working-directory: ./terraform  # 👈 Important! make sure .tf files are here
+        working-directory: ./terraform
     outputs:
       ec2_public_ip: ${{ steps.tf_outputs.outputs.ec2_public_ip }}
       ecr_repo_url: ${{ steps.tf_outputs.outputs.ecr_repo_url }}
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ env.TERRAFORM_VER }}
 
@@ -98,6 +98,7 @@ jobs:
     needs: [terraform, build_push]
     env:
       AWS_REGION: us-east-1
+      AWS_EC2: "flaskapp-web-server"
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
@@ -113,15 +114,18 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Get EC2 Public IP (from Terraform output)
+      - name: Get EC2 Public IP
         run: |
-          echo "EC2_PUBLIC_IP=${{ needs.terraform.outputs.ec2_public_ip }}" >> $GITHUB_ENV
-          echo "EC2 Public IP is ${{ needs.terraform.outputs.ec2_public_ip }}"
+          echo "EC2_PUBLIC_IP=$(aws ec2 describe-instances \
+            --filters Name=tag:Name,Values=${{ env.AWS_EC2 }} \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --output text)" >> $GITHUB_ENV
+          echo "EC2 Public IP is $EC2_PUBLIC_IP"
 
       - name: SSH into EC2 and Deploy Container
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ needs.terraform.outputs.ec2_public_ip }}
+          host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
@@ -136,8 +140,12 @@ jobs:
             fi
 
             if ! command -v aws &> /dev/null; then
-              echo "Installing AWS CLI..."
-              sudo apt install -y awscli
+              echo "Installing AWS CLI v2..."
+              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+              sudo apt install -y unzip
+              unzip awscliv2.zip
+              sudo ./aws/install
+              rm -rf aws awscliv2.zip
             fi
 
             echo "🧩 Configuring AWS CLI..."
