--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform
     env:
-      AWS_REGION: us-east-1
+      AWS_REGION: ${{ env.AWS_REGION }}
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
@@ -97,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [terraform, build_push]
     env:
-      AWS_REGION: us-east-1
+      AWS_REGION: ${{ env.AWS_REGION }}
       AWS_EC2: "flaskapp-web-server"
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
@@ -130,23 +130,33 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
+            #!/bin/bash
+            set -e
             echo "🔍 Checking Docker & AWS CLI..."
+
+            # Docker
             if ! command -v docker &> /dev/null; then
               echo "Installing Docker..."
-              sudo apt update -y && sudo apt install -y docker.io
+              sudo apt update -y
+              sudo apt install -y docker.io
               sudo systemctl start docker
               sudo systemctl enable docker
               sudo usermod -aG docker ubuntu
             fi
 
+            # AWS CLI v2
             if ! command -v aws &> /dev/null; then
               echo "Installing AWS CLI v2..."
+              sudo apt update -y
+              sudo apt install -y unzip curl
               curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-              sudo apt install -y unzip
               unzip awscliv2.zip
               sudo ./aws/install
               rm -rf aws awscliv2.zip
+              export PATH=$PATH:/usr/local/bin
             fi
+
+            aws --version
 
             echo "🧩 Configuring AWS CLI..."
             aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -162,7 +172,15 @@ jobs:
             docker rm flask-app || true
 
             echo "📦 Pulling new image..."
-            docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
+            MAX_RETRIES=3
+            for i in $(seq 1 $MAX_RETRIES); do
+              if docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}; then
+                break
+              else
+                echo "Retry $i/$MAX_RETRIES failed, retrying in 5s..."
+                sleep 5
+              fi
+            done
 
             echo "🚀 Running new container..."
             docker run -d -p 80:5000 --name flask-app ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}:${{ github.sha }}
