--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform
     env:
-      AWS_REGION: ${{ env.AWS_REGION }}
+      AWS_REGION: us-east-1
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
@@ -97,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [terraform, build_push]
     env:
-      AWS_REGION: ${{ env.AWS_REGION }}
+      AWS_REGION: us-east-1
       AWS_EC2: "flaskapp-web-server"
       GIT_SHA: ${{ github.sha }}
       ECR_REPO: docker-flask
